<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="stSystemEnvironment" Id="{8cf4a9d5-9db5-47be-856e-d1f649cb35a2}">
    <Declaration><![CDATA[TYPE stSystemEnvironment :
STRUCT
//R//
	error_code			:INT;
	state				:INT;
	temp_measured:LREAL;
	humidity_measured:LREAL;
	Error						:BOOL;
//W//	

	Reset:BOOL;
	BuzzerOn:BOOL;
	BuzzerOff:BOOL;
	duration:LREAL;//S
	period :LREAL;//S

	

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>