<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="Alm_EventClass" Id="{33718ad7-2564-4b5d-8241-1cf97704ce8d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE Alm_EventClass :
(
    NoAlarm        :=0,(*无警报*)
    Message      :=1,(*信息*)
    Event        :=2,(*事件*)
    non_3          :=3,(*暂无*)
    non_4          :=4,(*暂无*)
    non_5          :=5,(*暂无*)
    Alarm        :=6,(*不停机警报*)
    Stop         :=7(*停机警报*)
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>